kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-app
  template:
    metadata:
      labels:
        app: devops-app
    spec:
      containers:
      - name: devops
        image: akostadinovska/students-app:latest
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: config-volume
          mountPath: /config
      volumes:
      - name: config-volume
        configMap:
          name: app-config
