kubernetes/statefulset-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devops-db
  namespace: devops
spec:
  serviceName: "devops-db"
  replicas: 1
  selector:
    matchLabels:
      app: devops-db
  template:
    metadata:
      labels:
        app: devops-db
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
