kubernetes/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
  namespace: devops
spec:
  selector:
    app: devops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
