kubernetes/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-db
  namespace: devops
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: devops-db
